force-app/main/default/objects/CommonGroup__c/CommonGroup__c.object-meta.xml
<CustomObject>
    <description>공통 코드 그룹</description>
    <label>Common Group</label>
    <nameField>
        <label>Group Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>