force-app/main/default/objects/CommonGroup__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>그룹 코드 이름</description>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>