force-app/main/default/objects/CommonGroup__c/fields/NumberTitle01__c.field-meta.xml
<CustomField>
    <fullName>NumberTitle01__c</fullName>
    <label>Number Title01</label>
    <length>100</length>
    <type>Text</type>
</CustomField>