force-app/main/default/objects/CommonGroup__c/fields/NumberTitle02__c.field-meta.xml
<CustomField>
    <fullName>NumberTitle02__c</fullName>
    <label>Number Title02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>