force-app/main/default/objects/CommonGroup__c/fields/NumberTitle03__c.field-meta.xml
<CustomField>
    <fullName>NumberTitle03__c</fullName>
    <label>Number Title03</label>
    <length>100</length>
    <type>Text</type>
</CustomField>