force-app/main/default/objects/CommonGroup__c/fields/StringTitle01__c.field-meta.xml
<CustomField>
    <fullName>StringTitle01__c</fullName>
    <description>문자 제목1</description>
    <label>String Title01</label>
    <length>100</length>
    <type>Text</type>
</CustomField>