force-app/main/default/objects/CommonGroup__c/fields/StringTitle02__c.field-meta.xml
<CustomField>
    <fullName>StringTitle02__c</fullName>
    <label>String Title02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>