force-app/main/default/objects/CommonGroup__c/fields/StringTitle03__c.field-meta.xml
<CustomField>
    <fullName>StringTitle03__c</fullName>
    <label>String Title03</label>
    <length>100</length>
    <type>Text</type>
</CustomField>